--- a/installElastic.yml
+++ b/installElastic.yml
@@ -5,6 +5,14 @@
   vars_files:
     - vars/variables.yml
   tasks:
+    - name: InfluxDB datapath bind mount
+      lxc_container:
+        name: "{{ inventory_hostname }}"
+        container_command: |
+          [[ ! -d "/var/lib/elasticsearch" ]] && mkdir -p "/var/lib/elasticsearch"
+        container_config:
+          - "lxc.mount.entry=/openstack/{{ inventory_hostname }} var/lib/elasticsearch none bind 0 0"
+      delegate_to: "{{ physical_host }}"
     - name: Add Oracle Java PPA to apt sources list
       apt_repository: repo='ppa:webupd8team/java' state=present
     - name: Accept Java 8 License
