add topbeat data rotation

--- a/installElastic.yml
+++ b/installElastic.yml
@@ -36,3 +36,7 @@
         name: "elasticsearch"
         enabled: true
         state: restarted
+    - name: copy elk-data rotater script
+      copy: src=templates/rotate-topbeatdata.sh dest=/root/rotate-topbeatdata.sh mode=0755
+    - name: setup a cron job to use topbeat-data rotater script daily
+      cron: name="compress old topbeat data" minute="55" hour="23" job="/root/rotate-topbeatdata.sh"
